Multiple fixes - see commit messages for major fixes (#37)
* WIP - revised scroll of the modites / project list
fixed position of the user card when loading only the user

* Fixed map showing through the rows of modites
Fixed the the stuttered showing of the time / date over and over as you scroll
Fixed map overflow issue on desktop
Fixed Modite detail view lacking overflow-y
Fixed intermittent incorrect map markers showing up

* Fixed last name sorting

* Fixed project card position
Fixed project card's modites' scrolling
Fixed map overlap positioning on detail views

* Added time updating back to the view with time

--- a/src/components/DetailsView/styles.module.css
+++ b/src/components/DetailsView/styles.module.css
@@ -6,11 +6,12 @@
   left: 12px;
   right: 12px;
   border-radius: 20px 20px 0 0;
-  transform: translateY(calc(100% + 90px));
+  transform: translateY(calc(100% + 40vh));
   transition: transform 250ms;
   overflow: visible;
   text-align: center;
   box-shadow: 0px 16px 48px 0px rgba(0, 0, 0, .50);
+  height: 60vh;
 }
 
 .moditeCt>img {
@@ -30,7 +31,7 @@
 
 .activeModiteShown {
   transition-delay: 250ms;
-  transform: translateY(0px);
+  transform: translateY(40vh);
 }
 
 .activeModiteShown>img {
@@ -39,16 +40,16 @@
   transition-delay: 400ms;
 }
 
-.isModite {
-  padding: 124px 20px 20px 20px;
-}
-
 .isProject {
-  padding: 50px 0 0 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .moditeDetails {
   opacity: 0;
+  overflow-y: auto;
+  height: 100%;
+  padding: 124px 20px 20px 20px;
 }
 
 .moditeDetailsShown {
@@ -56,17 +57,18 @@
 }
 
 .projectDetails {
-  opacity: 0;
   height: 100%;
-}
-
-.projectDetailsShown {
-  opacity: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .name {
   font-weight: bold;
   font-size: 22px;
+}
+.isProject .name {
+  padding-top: 50px;
 }
 
 .location {
@@ -125,4 +127,8 @@
 
 .taco {
   margin-right: 8px;
+}
+
+.moditeListWrap {
+  flex: 1;
 }
