--- a/src/pages/Modites/styles.module.css
+++ b/src/pages/Modites/styles.module.css
@@ -9,7 +9,12 @@
 
 .mapWrap {
   height: 50vh;
+  margin: 0 auto;
   position: relative;
+}
+.mapWrapWide {
+  height: 45vh;
+  width: 50vh;
 }
 
 .mapOverlay {
@@ -19,5 +24,5 @@
   left: 0;
   right: 0;
   background: linear-gradient(to bottom, rgba(255,255,255,0) 60%,rgba(255,255,255,1) 84%),
-    linear-gradient(to bottom, rgba(255,255,255,0) 60%,rgba(255,255,255,1) 84%);
+    linear-gradient(to bottom, rgba(255,255,255,0) 70%,rgba(255,255,255,1) 100%);
 }
